fix: add wrap overflow to text edit cell

--- a/src/components/BodyCell/components/TextCellEdit/styles.css
+++ b/src/components/BodyCell/components/TextCellEdit/styles.css
@@ -1,8 +1,14 @@
-.NLT__textarea {
+.NLT__text-cell-edit {
+    width: 100%;
+    height: 100%;
+}
+
+.NLT__text-cell-edit textarea {
     width: 100%;
     height: 100%;
     border: 0 !important;
     overflow: hidden;
     padding: var(--nlt-cell-spacing-x) var(--nlt-cell-spacing-y);
     resize: none;
+    font-size: var(--font-ui-medium) !important;
 }
